<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/rx"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/readBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/read_buffer" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/status"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bluetooth_states"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/bluetooth_status"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>

        <Button
            android:id="@+id/on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetoothON" />

        <Button
            android:id="@+id/off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetoothOFF" />

        <Button
            android:id="@+id/PairedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showPairedDevices" />
            <!--android:layout_below="@+id/scan"-->

        <Button
            android:id="@+id/discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discoverNewDevices" />

        <Button
            android:id="@+id/showData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showData"/>

        <ListView
            android:id="@+id/paired_devices_List_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>

    </LinearLayout>

</LinearLayout>